# jidori-kun

./: .gitignore  LICENSE  README.md  index.html  latest.json  latest.json.example  package.json  pnpm-lock.yaml  vite.config.js
.claude/skills/jidori-pose-ref/: SKILL.md
.github/workflows/: release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  mcp.rs  settings.rs
